--- a/main_style.css
+++ b/main_style.css
@@ -20,17 +20,17 @@ ul.topnav {
     list-style-type: none;
     margin: 0;
     padding: 0;
-    overflow: hidden;
+    width: 3%;
     background-color: transparent;
 }
 ul.topnav li {
     float: left
 }
 ul.topnav li a {
-    display: block;
+    display: inline-block;
     color: #12387f;
     text-align: center;
-    padding: 14px 16px;
+    padding: 8px 16px;
     text-decoration: none;
     transition: 0.3s;
     font-size: 17px;
@@ -51,7 +51,7 @@ ul.topnav li.icon {
   ul.topnav li:not(:first-child) {display: none;}
   ul.topnav li.icon {
     float: right;
-    display: block;
+    display: inline-block;
   }
 }
 @media screen and (max-width:680px) {
@@ -63,7 +63,7 @@ ul.topnav li.icon {
   }
    ul.topnav.responsive li {
     float: none;
-    display: block;
+    display: inline;
   }
   ul.topnav.responsive li a {
     display: block;
