--- a/main_style.css
+++ b/main_style.css
@@ -18,7 +18,7 @@ body {
 }
 ul.topnav {
     list-style-type: none;
-    margin: 0;
+    margin-top: 30%;
     padding: 0;
     width: 3%;
     background-color: transparent;
