--- a/main_style.css
+++ b/main_style.css
@@ -28,6 +28,10 @@ body {
 #orange {
     background-color: peachpuff;
 }
+ul {
+    background-color:black;
+    width:4%;
+}
 ul.topnav {
     list-style-type: none;
     margin-top: 15%;
