height and width

--- a/main_style.css
+++ b/main_style.css
@@ -30,6 +30,8 @@ body {
 }
 #mytopnav {
     background-color:black;
+    width: 10%;
+    height: 100%;
 }
 ul.topnav {
     list-style-type: none;
