--- a/main_style.css
+++ b/main_style.css
@@ -34,10 +34,12 @@ ul.topnav {
     margin-top: 15%;
     padding: 0;
     width: 13%;
+    margin-left: 2%;
 }
 ul.topnav li {
     float: right;
     text-align: right;
+    margin-bottom: 3%;
 }
 ul.topnav li a {
     display: inline-block;
