--- a/main_style.css
+++ b/main_style.css
@@ -18,8 +18,9 @@ body {
 }
 #content {
     background-color: tan;
-    margin-left: 16%;
+    margin-left: 13%;
     margin-right: 2%;
+    height: 100%;
 
 
 }
