--- a/main_style.css
+++ b/main_style.css
@@ -17,10 +17,11 @@ body {
     padding: 0;
 }
 #content {
-    background-color: tan;
+    background-color: slategrey;
     margin-left: 13%;
     margin-right: 2%;
     height: 100%;
+    padding: 2%;
 
 
 }
