--- a/main_style.css
+++ b/main_style.css
@@ -46,12 +46,14 @@ ul.topnav {
     width: 13%;
     margin-left: 2%;
 }
-ul.topnav li {
-    float: right;
-    text-align: right;
-    margin-bottom: 3%;
-    margin-left: 2%;
-}
+    ul.topnav li {
+        border-top-left-radius: 15px;
+        border-bottom-left-radius: 15px;
+        float: right;
+        text-align: right;
+        margin-bottom: 3%;
+        margin-left: 2%;
+    }
 ul.topnav li a {
     display: inline-block;
     color: white;
