--- a/main_style.css
+++ b/main_style.css
@@ -47,8 +47,7 @@ ul.topnav {
     margin-left: 2%;
 }
     ul.topnav li {
-        border-top-left-radius: 15px;
-        border-bottom-left-radius: 15px;
+        border-radius: 15px 0 0 15px;
         float: right;
         text-align: right;
         margin-bottom: 3%;
