--- a/main_style.css
+++ b/main_style.css
@@ -25,8 +25,9 @@ body {
 
 
 }
-#purple{
+#purple {
     background-color: mediumpurple;
+    border-radius: 15px 0 0 15px;
 }
 #blue {
     background-color: cornflowerblue;
