--- a/main_style.css
+++ b/main_style.css
@@ -61,7 +61,8 @@ ul.topnav li a {
     display: inline-block;
     color: white;
     text-align: right;
-    padding: 30px 20px;
+    padding: 20px 20px;
+    margin-top: 2%;
     text-decoration: none;
     transition: 0.3s;
     font-size: 17px;
