--- a/main_style.css
+++ b/main_style.css
@@ -48,6 +48,7 @@ ul.topnav {
     padding: 0;
     width: 11%;
     margin-left: 2%;
+    position:fixed;
 }
 ul.topnav li {
     display: inline-block;
