--- a/main_style.css
+++ b/main_style.css
@@ -37,6 +37,10 @@ body {
     background-color: red;
     border-radius: 15px 0 0 15px;
 }
+#yellow {
+    background-color: yellow;
+    border-radius: 15px 0 0 15px;
+}
 #orange {
     background-color: peachpuff;
     border-radius: 15px 0 0 15px;
